--- a/tex/main.tex
+++ b/tex/main.tex
@@ -219,7 +219,7 @@ lack geo-coordinates.
 %
 \marginnote{\CODE{code/data/20210610-NYCTLC/a_download.py}}
 %
-See Fig.~\ref{f:nyctlc} for a summary of the remaining trips.
+See Fig.~\ref{f:nyctlc} for a net summary.
 %
 %
 
