--- a/tex/main.tex
+++ b/tex/main.tex
@@ -414,9 +414,7 @@ to find reasonable solutions computationally.
 We can roughly assess optimality
 by allotting more time to the solver.
 %
-%
-We compare ``customer satisfaction''
-across different fleet sizes $N$ and bus capacities $C$.
+
 
 %
 
@@ -426,6 +424,9 @@ we focus on a small slice of
 the trip data at a time,
 i.e.~%
 a few hundred passengers $\times$ one hour $\times$ a few square kilometers.
+%
+We then compare ``customer satisfaction''
+across different fleet sizes $N$ and bus capacities $C$.
 
 %
 
