intermediate case study results

--- a/tex/main.tex
+++ b/tex/main.tex
@@ -458,7 +458,7 @@ within
 %
 %
 Allowing $n = 400$ requests
-is a little difficult to solve ($\sim$\SI{1}{h} $\times$ \SI{2}{Gflop/s}),
+is already a little difficult to solve ($\sim$\SI{1}{h} $\times$ \SI{2}{Gflop/s}),
 so we focus here on
 \begin{quote}
 	$n = 100$ requests
@@ -478,10 +478,10 @@ see Fig.~\ref{f:case1-hist}.
 %
 
 The vehicle load over time is shown in Fig.~\ref{f:case1-load},
-indicating that it runs at about half the capacity.
+indicating that the fleet runs at about half the capacity.
 %
 Since all $n = 100$ pickup requests are from the first \SI{17}{min} only,
-the fleet would be able to handle more requests per minute
+it would be able to handle more requests per minute
 if operating over an extended period.
 
 \TODO{more on this?}
