--- a/tex/main.tex
+++ b/tex/main.tex
@@ -417,6 +417,8 @@ We can roughly assess optimality
 by allotting more time to the solver.
 %
 
+\TODO{what is the cost}
+\TODO{initial solution}
 
 %
 
@@ -544,6 +546,8 @@ we estimate that this demand can be serviced by
 		Histogram of excess travel time
 		w.r.t.~the quickest route
 		($n = 100$ requests for $N = 10$ vehicles).
+		%
+		The last bar shows unserviced requests.
 		%
 		See \S\ref{s:case1}.
 	}
