--- a/tex/main.tex
+++ b/tex/main.tex
@@ -163,8 +163,7 @@ and other ``for-hire vehicle''
 trips 
 in New York City.
 %
-In the earlier years
-in particular,
+In the earlier years in particular,
 Yellow and Green taxi records
 contain timestamps,
 trip distance, 
@@ -183,6 +182,8 @@ we give a partial answer to the question
 %
 
 
+
+%
 
 Conventions.
 %
@@ -331,6 +332,11 @@ This is repeated.
 Henceforth, ``quickest''
 means
 w.r.t.~this traffic model.
+%
+%
+We are assuming that drivers
+are not sufficiently incentivised for detours
+(the credence good asymmetry is not significant).
 
 
 \begin{figure}[!p]
