--- a/tex/main.tex
+++ b/tex/main.tex
@@ -678,7 +678,7 @@ for (B) passengers.
 %
 Comparing
 $A$~vs.~$B + (e \times c)$
-for each time-to-dollar factor $c$ from the income distribution
+for each $c$ from the income distribution
 gives a ratio $\bar{a} / \bar{b}$
 of those who actually prefer (A) to those who prefer (B).
 %
