fix `traffic model`

--- a/tex/main.tex
+++ b/tex/main.tex
@@ -635,7 +635,7 @@ while trip speeds near Times Square are nearly 3$\times$ lower
 %
 %
 We postulate a causal link and
-assume the 6-7~am traffic \`a la \S\ref{s:traffic} 
+assume the traffic model of \S\ref{s:traffic} 
 when all passengers take (B);
 assume $1/3$ the speeds 
 when all passengers take (A);
