--- a/tex/main.tex
+++ b/tex/main.tex
@@ -684,20 +684,19 @@ gives a ratio $\bar{a} / \bar{b}$
 of those who actually prefer (A) to those who prefer (B).
 %
 %
-This evolutionary pressure
-indicates
-whether (A) or (B) should increase 
-starting from the condition $a / b$.
-
+%This evolutionary pressure
+%indicates
+%whether (A) or (B) should increase 
+%starting from the condition $a / b$.
 %
-
+%
 The results (Fig.~\ref{f:game1})
 indicate that 
 \begin{itemize}
 \item 
-	half the people prefer taking the minibus if $A - B = \SI{3}{\$}$; and
+	50-60\% prefer taking the minibus if $A - B = \SI{3}{\$}$; and
 \item
-	most people prefer taking the minibus if $A - B = \SI{6}{\$}$.
+	80-90\% prefer taking the minibus if $A - B = \SI{6}{\$}$.
 \end{itemize}
 
 \begin{figure}
@@ -711,8 +710,6 @@ indicate that
 \protect\TODO{caption}
 \end{figure}
 
-The conspicuous outlier at $(b, \bar{b}) \approx (0.8, 1)$
-is from a solution that is qualitatively different from others.
 
 \TODO{code refs}
 
